--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -179,6 +179,32 @@
   /* height: 12.5%; */
 }
 
+.socialModalRight .dayCaption .textAreaHolder{
+  /* background-color: red; */
+  display: flex;
+  padding-right: 5%;
+}
+
+.socialModalRight .dayCaption .textAreaHolder .captionTextHolder{
+  rows: 1;
+  /* width: 10px; */
+}
+
+.socialModalRight .dayCaption .textAreaHolder .penIcon{
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.socialModalRight .dayCaption .writeCaptionText{
+  color: lightgray;
+  font-size: 15px;
+}
+.socialModalRight .dayCaption .writeCaptionText:hover{
+  color: gray;
+  cursor: pointer;
+}
+
+
 .socialModalRight .socialNameTag {
   /* background-color: red; */
   height: 9%;
