addin g caption on the modal itself

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -186,8 +186,7 @@
 }
 
 .socialModalRight .dayCaption .textAreaHolder .captionTextHolder{
-  rows: 1;
-  /* width: 10px; */
+  width: 100%;
 }
 
 .socialModalRight .dayCaption .textAreaHolder .penIcon{
