--- a/frontend/src/containers/Home.css
+++ b/frontend/src/containers/Home.css
@@ -9,8 +9,8 @@
   opacity:0.8;
     background-color:white;
     position:fixed;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     top:0px;
     left:0px;
     z-index:1000;
