--- a/frontend/src/containers/Home.css
+++ b/frontend/src/containers/Home.css
@@ -4,6 +4,25 @@
   color:black;
 }
 
+.loginTitle{
+  color:#68BFFD;
+
+  font-size: 3vw;
+  margin-top: 10%;
+  margin-left: 20%;
+  position:'absolute';
+  font-weight: 500;
+  margin-bottom: 5%;
+  /* background-color: red; */
+  max-width:700px;
+}
+
+.loginFormInnerContent{
+  position:absolute;
+  top:20%;
+  width:60%;
+  left:20%;
+}
 
 .parentContainer{
   opacity:0.8;
@@ -22,7 +41,7 @@
 }
 
 .one {
-  width: 40%;
+  width: 50%;
   height: 100%;
   /* background: red; */
   float: left;
