--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -1,4 +1,27 @@
 
+.everythingContainer{
+  background-color: red;
+  display: flex;
+  width: 100vw;
+
+}
+
+@media screen and (max-width: 1000px){
+  .everythingContainer .sideMenuContainer{
+    display: none;
+  }
+}
+@media all and (min-width: 1000px) and {
+  .everythingContainer .sideMenuContainer{
+    display: none;
+  }
+}
+
+.everythingContainer .sideMenuContainer{
+  position: relative;
+  background-color: white;
+}
+
 
 
 @media screen and (min-height: 540px) and (max-height: 780px) {
@@ -18,6 +41,17 @@
 }
 
 
+
+
+.toggle {
+  /* background: blue; */
+  color:black;
+  position:relative;
+  font-size: 1em;
+  width:1vw;
+  float:left;
+
+}
 
 
 
@@ -93,5 +127,163 @@ background: #f5222d;
   background:pink;
   position: relative;
 
-  left: 4%;
+  left: 0%;
 }
+
+
+
+
+    /*
+  p.show-sidebar {
+    overflow: hidden; }
+    p.show-sidebar:before {
+      opacity: 1;
+      visibility: visible; } */
+
+.site-section {
+  padding: 7rem 0; }
+/*
+  aside, main {
+    height: 74vh;
+    min-height: 580px;
+  } */
+
+
+aside {
+
+  width:4vw;
+  left: 0;
+  border-right: 1px solid #f0f0f0;
+  z-index: 1001;
+  position: relative;
+  -webkit-transform: translateX(0px);
+  -ms-transform: translateX(0px);
+  transform: translateX(0px);
+  background-color: #fff;
+  -webkit-transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1); }
+  .show-sidebar aside {
+    width:210px;
+
+    -webkit-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    transform: translateX(0%); }
+  aside .toggle {
+    padding-left: 30px;
+    padding-top: 30px;
+    position: absolute;
+    right: 0;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    transform: translateX(100%); }
+
+  aside .side-inner {
+    padding: 30px 0;
+    height: 100vh;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; }
+    aside .side-inner::-webkit-scrollbar {
+      display: none; }
+    aside .side-inner .logo-wrap {
+      display: block;
+      position: relative;
+      width: 100%;
+      float: left;
+    }
+      aside .side-inner .logo-wrap .logo {
+        width: 2.5vw;
+        float: left;
+        height: 2.5vw;
+        background: #007bff;
+        border-radius: 50%;
+        position: relative;
+        -webkit-transition: .3s margin ease;
+        -o-transition: .3s margin ease;
+        transition: .3s margin ease;
+        margin: 0 auto 50px 10px; }
+        .show-sidebar aside .side-inner .logo-wrap .logo {
+          margin: 0 auto 50px 20px;
+
+        }
+      .show-sidebar aside .side-inner .logo-wrap .logo{
+        width: 50px;
+        height: 50px;
+      }
+        /* logo of closed side menu */
+        aside .side-inner .logo-wrap .logo span {
+          position: absolute;
+          color: #fff;
+          font-size: 1.2vw;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+      }
+      .show-sidebar aside .side-inner .logo-wrap .logo span{
+        font-size: 1.5rem;
+
+      }
+      aside .side-inner .logo-wrap .logo-text {
+        position: absolute;
+        top: 10%;
+        font-size: 20px;
+        margin-left: 5px;
+        -webkit-transition: .3s all ease;
+        -o-transition: .3s all ease;
+        transition: .3s all ease;
+        opacity: 0;
+        visibility: hidden; }
+        .show-sidebar aside .side-inner .logo-wrap .logo-text {
+          opacity: 1;
+          font-weight: 600;
+          visibility: visible; }
+
+
+    aside .side-inner .nav-menu {
+      margin-bottom: 50px;
+      clear: both; }
+      /* make padding 0 rather than 35% */
+      aside .side-inner .nav-menu ul, aside .side-inner .nav-menu ul li {
+        padding: 0;
+        margin: 0px;
+        list-style: none; }
+      aside .side-inner .nav-menu ul li a {
+        display: block;
+        padding-left: 35%;
+        padding-right: 50px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        color: #b1b1b1;
+        position: relative;
+        -webkit-transition: .3s all ease;
+        -o-transition: .3s all ease;
+        transition: .3s all ease;
+        font-size: 100%;
+      }
+      .show-sidebar aside .side-inner .nav-menu ul li a {
+        padding-left: 30px;
+      }
+        aside .side-inner .nav-menu ul li a:active, aside .side-inner .nav-menu ul li a:focus, aside .side-inner .nav-menu ul li a:hover {
+          outline: none; }
+        aside .side-inner .nav-menu ul li a:hover {
+          color: #000;
+          background: #f4f4f4; }
+        aside .side-inner .nav-menu ul li a .wrap-icon {
+          font-size: 1.2rem; }
+        aside .side-inner .nav-menu ul li a .menu-text {
+          opacity: 0;
+          visibility: hidden;
+          -webkit-transition: .3s all ease;
+          -o-transition: .3s all ease;
+          transition: .3s all ease; }
+          .show-sidebar aside .side-inner .nav-menu ul li a .menu-text {
+            -webkit-transition: 0s all ease;
+            -o-transition: 0s all ease;
+            transition: 0s all ease;
+            opacity: 1;
+            visibility: visible; }
+      aside .side-inner .nav-menu ul li.active a {
+        color: #000; }
