--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -156,19 +156,22 @@ aside {
   border-right: 1px solid #f0f0f0;
   z-index: 1001;
   position: relative;
-  -webkit-transform: translateX(0px);
-  -ms-transform: translateX(0px);
-  transform: translateX(0px);
+  /* -webkit-transform: translateX(0px); */
+  /* -ms-transform: translateX(0px); */
+  /* transform: translateX(0px); */
   background-color: #fff;
   -webkit-transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1);
   -o-transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1);
   transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1); }
+
+  /* width when opened sidemenu */
   .show-sidebar aside {
     width:210px;
 
-    -webkit-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    transform: translateX(0%); }
+    /* -webkit-transform: translateX(0%); */
+    /* -ms-transform: translateX(0%); */
+    /* transform: translateX(0%);  */
+  }
   aside .toggle {
     padding-left: 30px;
     padding-top: 30px;
@@ -176,22 +179,28 @@ aside {
     right: 0;
     -webkit-transform: translateX(100%);
     -ms-transform: translateX(100%);
-    transform: translateX(100%); }
+    transform: translateX(100%);
+  }
 
   aside .side-inner {
     padding: 30px 0;
     height: 100vh;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: none; }
+    -ms-overflow-style: none;
+    position: relative;
+  }
     aside .side-inner::-webkit-scrollbar {
       display: none; }
     aside .side-inner .logo-wrap {
       display: block;
-      position: relative;
-      width: 100%;
+      /* background-color: red; */
+      position: fixed;
+      /* width: 5%; */
       float: left;
     }
+
+
       aside .side-inner .logo-wrap .logo {
         width: 2.5vw;
         float: left;
@@ -244,16 +253,33 @@ aside {
 
     aside .side-inner .nav-menu {
       margin-bottom: 50px;
-      clear: both; }
+      clear: both;
+
+    }
+
+    aside .side-inner .nav-menu ul{
+      position: fixed;
+      width: 3.5%;
+      /* background-color: red; */
+      top: 110px;
+
+    }
+
+    .show-sidebar aside .side-inner .nav-menu ul{
+      width: 210px;
+    }
+
       /* make padding 0 rather than 35% */
       aside .side-inner .nav-menu ul, aside .side-inner .nav-menu ul li {
         padding: 0;
         margin: 0px;
-        list-style: none; }
+        list-style: none;
+
+      }
       aside .side-inner .nav-menu ul li a {
         display: block;
         padding-left: 35%;
-        padding-right: 50px;
+        /* padding-right: 50px; */
         padding-top: 20px;
         padding-bottom: 20px;
         color: #b1b1b1;
@@ -270,7 +296,15 @@ aside {
           outline: none; }
         aside .side-inner .nav-menu ul li a:hover {
           color: #000;
-          background: #f4f4f4; }
+          background: #f4f4f4;
+          width: 4vw;
+        }
+
+        .show-sidebar aside .side-inner .nav-menu ul li a:hover{
+          color: #000;
+          background: #f4f4f4;
+          width: 210px;
+        }
         aside .side-inner .nav-menu ul li a .wrap-icon {
           font-size: 1.2rem; }
         aside .side-inner .nav-menu ul li a .menu-text {
