--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,9 +1,10 @@
 .newsfeedParentParenet{
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   /* background-color: red; */
   position: relative;
   /* left: 7%; */
+  top: 10%;
 }
 
 .newsfeedParent{
@@ -14,10 +15,45 @@
 
 .newsfeedParent .profileCardContainer{
   background-color: red;
+  width: 18%;
+}
+
+.newsfeedParent .newsfeedMidContainer{
+  background-color: blue;
+  width: 50%;
+}
+
+.newsfeedParent .newsfeedMidContainer .newsfeedActionButtons{
+  display:  flex;
+  flex-direction: row;
+  /* background-color: blue; */
+  /* flex-wrap: wrap; */
+  width: 75%;
+  gap: 3%;
 }
 
 
+.newsfeedParent .newsfeedMidContainer .newsfeedActionButtons .topCard {
+  position: relative;
+  cursor: pointer;
+  background: white;
+  width: 33.33%;
+  padding:5%;
+  /* margin: 10px; */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
+}
+
+.newsfeedParent .suggestedFriendsContainer{
+  background-color: red;
+  width: 27%;
+}
+
+.newsfeedParent .suggestedFriendsContainer .suggestedFriendsCard {
+  width:100%;
+  background:white;
+  position: relative;
+}
 
 
 
