--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -1,14 +1,16 @@
 .profileCard-NF{
   background-color: white;
-  width: 10vw;
+  width: 200px;
   height: 260px;
   z-index: 1;
   border-radius: 10px;
   display: grid;
   /* grid-template-rows: auto 100px; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-  position: relative;
+  position: fixed;
+  /* left: 7%; */
   overflow: hidden;
+  margin-left: 4%;;
   padding:10px;
   box-shadow:  0 10px 50px rgba(0, 0, 0, 0.12);
 
