--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -8,12 +8,22 @@
   /* grid-template-rows: auto 100px; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
   position: fixed;
+  /* position: relative; */
   /* left: 7%; */
   overflow: hidden;
-  margin-left: 4%;;
+  float: right;
+  margin-right: 5%;
+  /* left: calc(1500px -1000px); */
+  /* left: 100px; */
   padding:10px;
   box-shadow:  0 10px 50px rgba(0, 0, 0, 0.12);
 
+}
+
+@media screen and (max-width: 1000px){
+  .profileCard-NF{
+    display: None;
+  }
 }
 
 .clickable{
