some css change in newsfeed

--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -11,8 +11,8 @@
   /* position: relative; */
   /* left: 7%; */
   overflow: hidden;
-  float: right;
-  margin-right: 5%;
+  /* float: right; */
+  margin-left: 5%;
   /* left: calc(1500px -1000px); */
   /* left: 100px; */
   padding:10px;
