--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,7 +1,7 @@
 .newsfeedParentParenet{
   width: 100%;
   height: 100%;
-  /* background-color: red; */
+  background-color: red;
   position: relative;
   /* left: 7%; */
   top: 10%;
@@ -25,35 +25,44 @@
 }
 
 .newsfeedParent .newsfeedMidContainer{
-  background-color: blue;
+  /* background-color: blue; */
   width: 50%;
+  position: relative;
   /* text-align: center; */
   /* align-items: center; */
 }
 
-.newsfeedParent .newsfeedMidContainer .newsfeedActionButtons{
+.newsfeedParent .newsfeedMidContainer .newsfeedItself{
+  position: relative;
+  width: 74%;
+  margin-left: 10%;
+  background-color: green;
+}
+
+.newsfeedParent .newsfeedMidContainer .newsfeedItself .newsfeedActionButtons{
   display:  flex;
   flex-direction: row;
-  /* background-color: blue; */
+  background-color: red;
+  position: relative;
   /* flex-wrap: wrap; */
-  width: 75%;
+  width: 100%;
   gap: 3%;
 }
 
 
-.newsfeedParent .newsfeedMidContainer .newsfeedActionButtons .topCard {
+.newsfeedParent .newsfeedMidContainer .newsfeedItself .newsfeedActionButtons .topCard {
   position: relative;
   cursor: pointer;
   background: white;
-  width: 33.33%;
-  padding:5%;
+  width: 215px;
+  /* padding:5%; */
   /* margin: 10px; */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 }
 
 .newsfeedParent .suggestedFriendsContainer{
-  background-color: red;
+  /* background-color: red; */
   width: 27%;
 }
 
