change the icons in side menu to black

--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -291,7 +291,7 @@ aside {
         /* padding-right: 50px; */
         padding-top: 20px;
         padding-bottom: 20px;
-        color: #b1b1b1;
+        color: black;
         position: relative;
         -webkit-transition: .3s all ease;
         -o-transition: .3s all ease;
