--- a/frontend/src/components/PostPageFolder/UserPostPage.css
+++ b/frontend/src/components/PostPageFolder/UserPostPage.css
@@ -19,8 +19,8 @@
   position: relative;
   background: white;
   /* height: 100; */
-  top: 5%;
-  left:7.5%;
+  top: 6%;
+  left:6%;
   right: 10%;
   z-index: 100;
   width:85%;
@@ -162,11 +162,11 @@
 /* This part is for the comment area of the post */
 .postCommentBoxBox{
   /* height: 75.5%; */
-
-  width: 500px;
+  position:relative;
+  width: 100%;
   overflow:hidden;
   /* background-color: red; */
-  max-height: 560px;
+  max-height: 70%;
 }
 /*
 .postCommentBoxBox.hasCaption{
@@ -241,17 +241,24 @@
   left: 9.65%;
   top: -15px;
 }
-.postCommentBox .postCommentInput{
-  /* background-color: red; */
-  display: flex;
+.postCommentInput{
+  display:flex;
+  /* background: red; */
+  position:relative;
+  float:right;
+  width:100%;
+  height:5%;
 
-  left: 0%;
-  bottom: 15px;
+}
+
+.postPicInput{
+
 }
 .postBoxInput{
-  position:relative;
-  width: 190%;
-  margin-left: 10px;
+  flex:1;
+  position:absolute;
+  left:10%;
+  width: 90%;
   font-size: 15px;
 }
 
