--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,7 +1,7 @@
 .newsfeedParentParenet{
   width: 100%;
   height: 100%;
-  background-color: red;
+  /* background-color: red; */
   position: relative;
   /* left: 7%; */
   top: 10%;
