--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -12,10 +12,9 @@
     display: none;
     /* width: 0%; */
   }
-  .show-sidebar aside {
-    /* width: 210px; */
+  .toggle{
+    display: none;
   }
-
 
 }
 
@@ -47,21 +46,6 @@
         background: white;
     }
 }
-
-
-
-
-.toggle {
-  /* background: blue; */
-  color:black;
-  position:relative;
-  font-size: 1em;
-  width:1vw;
-  float:left;
-
-}
-
-
 
 
 
@@ -111,14 +95,6 @@ background: #f5222d;
   padding-bottom: 80px;
 }
 
-.site-layout .site-layout-background {
-  background: #fff;
-  /* background-color: black; */
-}
-
-.appearBefore{
-   z-index: 3;
-}
 
 .SideMenuAppearBefore{
    z-index: 5;
@@ -129,14 +105,6 @@ background: #f5222d;
   margin-right: 10px;
 }
 
-.backgroundofEverything{
-  width:100vw;
-  height:100vh;
-  /* background:pink; */
-  position: relative;
-
-  left: 0%;
-}
 
 
 
@@ -223,6 +191,7 @@ aside {
       display: block;
       /* background-color: red; */
       position: fixed;
+      top: 5px;
       /* width: 5%; */
       float: left;
     }
@@ -240,9 +209,13 @@ aside {
         -webkit-transition: .3s margin ease;
         -o-transition: .3s margin ease;
         transition: .3s margin ease;
-        margin: 0 auto 50px 10px; }
+        margin-left: 20%;
+        /* margin: 0 auto 50px 10px;  */
+        /* margin-left:  */
+      }
         .show-sidebar aside .side-inner .logo-wrap .logo {
-          margin: 0 auto 50px 20px;
+          /* margin: 0 auto 50px 20px; */
+          margin-left: 20px;
 
         }
       .show-sidebar aside .side-inner .logo-wrap .logo{
@@ -290,7 +263,7 @@ aside {
 
     aside .side-inner .nav-menu ul{
       position: fixed;
-      width: 3.5%;
+      width: 4vw;
       /* background-color: red; */
       top: 110px;
     }
@@ -307,8 +280,8 @@ aside {
 
       }
       aside .side-inner .nav-menu ul li a {
-        display: block;
-        padding-left: 35%;
+        /* display: block; */
+        padding-left: 33%;
         /* padding-right: 50px; */
         padding-top: 20px;
         padding-bottom: 20px;
@@ -318,16 +291,19 @@ aside {
         -o-transition: .3s all ease;
         transition: .3s all ease;
         font-size: 100%;
+        /* width: 100%; */
       }
       .show-sidebar aside .side-inner .nav-menu ul li a {
         padding-left: 30px;
       }
         aside .side-inner .nav-menu ul li a:active, aside .side-inner .nav-menu ul li a:focus, aside .side-inner .nav-menu ul li a:hover {
-          outline: none; }
+          outline: none;
+
+        }
         aside .side-inner .nav-menu ul li a:hover {
           color: #000;
           background: #f4f4f4;
-          width: 4vw;
+          width: 100%;
         }
 
         .show-sidebar aside .side-inner .nav-menu ul li a:hover{
@@ -351,3 +327,95 @@ aside {
             visibility: visible; }
       aside .side-inner .nav-menu ul li.active a {
         color: #000; }
+
+
+
+.rightContentContainer{
+  /* background-color: red; */
+  width: 96vw;
+  display: flex;
+  flex-direction: column;
+}
+
+/* header */
+.headerContainer{
+  z-index: 3;
+  background: white;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  position: relative;
+  padding: 0px;
+  /* padding-top: 0px; */
+}
+
+.mainContentContainer{
+  /* background-color:red; */
+}
+
+.headerContainer .burgerContainer{
+  /* background-color: red; */
+  text-align: center;
+  width: 5%;
+  position:relative;
+  top:5px;
+
+}
+
+.toggle {
+  /* background: blue; */
+  /* color:black; */
+  position:relative;
+  font-size: 20px;
+  color: black;
+  /* top: 25%; */
+  /* width:1vw; */
+  /* float:left; */
+
+}
+
+
+.searchBarContainer{
+  width:70%;
+  /* background-color: blue; */
+
+}
+
+
+.searchBarContainer .autoCompleteHeader{
+  /* background:blue; */
+  position:relative;
+  left: 25%;
+  /* transform: translateX(-50%); */
+  top:2.5px;
+  color: black;
+}
+
+.searchBarContainer .autoCompleteHeader .inputSearchCSS{
+  position:relative;
+ left:50%;
+ width: 500;
+}
+
+
+
+.headerContainer .headersNotificationContainer{
+  position: relative;
+  background:green;
+
+  width:12.5%;
+}
+
+.headerContainer .headersProfileContainer{
+  position: relative;
+  /* background:brown; */
+  width:12.5%
+}
+
+.headerContainer .headersProfileContainer .profileHeader{
+  position: relative;
+  left:40%;
+  transform: translateX(-50%);
+  top:5px;
+
+}
