--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -4,7 +4,7 @@
   /* background-color: red; */
   position: relative;
   /* left: 7%; */
-  top: 10%;
+  top: 50px;
 }
 
 .newsfeedParent{
@@ -25,8 +25,8 @@
 }
 
 .newsfeedParent .newsfeedMidContainer{
-  /* background-color: blue; */
-  width: 50%;
+  background-color: blue;
+  width: 55%;
   position: relative;
   /* text-align: center; */
   /* align-items: center; */
@@ -35,7 +35,8 @@
 .newsfeedParent .newsfeedMidContainer .newsfeedItself{
   position: relative;
   width: 74%;
-  margin-left: 10%;
+  left: 40%;
+  transform: translateX(-50%);
   background-color: green;
 }
 
@@ -51,18 +52,26 @@
 
 
 .newsfeedParent .newsfeedMidContainer .newsfeedItself .newsfeedActionButtons .topCard {
+
   position: relative;
   cursor: pointer;
-  background: white;
-  width: 215px;
-  /* padding:5%; */
-  /* margin: 10px; */
+  background: #FFFFFF;
+  padding:30px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+  width:215px;
 
 }
 
+/* .topCard {
+  position: relative;
+  cursor: pointer;
+  background: #FFFFFF;
+  padding:30px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+} */
+
 .newsfeedParent .suggestedFriendsContainer{
-  /* background-color: red; */
+  background-color: red;
   width: 27%;
 }
 
@@ -102,13 +111,7 @@
 }
 
 
-.topCard {
-  position: relative;
-  cursor: pointer;
-  background: #FFFFFF;
-  padding:30px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
-}
+
 .share{
   position: absolute;
   top: 35%;
