--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -10,6 +10,7 @@
 .dropdown-content{
   display: none;
   position: fixed;
+  
   background-color: #f1f1f1;
   min-width: 160px;
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
@@ -17,7 +18,7 @@
   z-index: 1;
 }
 
-.show {
+.dropdown-content.show {
   display:block;
   z-index: 1;
 }
