--- a/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
@@ -44,7 +44,7 @@
   transform: translateY(-50%);
   right:0%;
   /* right: 100%; */
-  background:red;
+  /* background:red; */
   z-index: 10;
   font-size: 45px;
 }
