--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -10,7 +10,7 @@
 .dropdown-content{
   display: none;
   position: fixed;
-  
+
   background-color: #f1f1f1;
   min-width: 160px;
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
@@ -75,6 +75,7 @@
 .notificationListContainer .listNotificationFriend .deleteButton{
   width: 10px;
   /* height: 100px; */
+  /* background-color: red; */
   text-align: left;
   position: absolute;
   left: 287px;
